Terraform/2-vpc.tf
resource "google_project_service" "compute" {
  service = "compute.googleapis.com"
}

resource "google_project_service" "container" {
  service = "container.googleapis.com"
}

resource "google_compute_network" "ucraft-vpc" {
  name = "ucraft-vpc"
  routing_mode = "REGIONAL"
  auto_create_subnetworks = false
  mtu = "1500"
  delete_default_routes_on_create = false

  depends_on = [
    google_project_service.compute,
    google_project_service.container
  ]
}
